experimentData/JavaFuzzer/FernFlower-detailedExperimentData/errorSamples/168/my-test/tmp/fernflower/tmp/output.txt
Test.java:195: error: incompatible types: possible lossy conversion from long to int
               int var10002 = lArrFld[var17]--;
                                            ^
Note: Test.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
1 error
